new projects added

--- a/03 Recipe Book App/index.html
+++ b/03 Recipe Book App/index.html
@@ -12,43 +12,14 @@
     </header>
     <div class="container">
         <ul class="recipe-list">
-            <li class="recipe-item">
+            <!-- Sample items to demonstrate styling -->
+            <!-- <li class="recipe-item">
                 <img src="https://spoonacular.com/recipeImages/12345-312x231.jpg" alt="Recipe 1">
                 <h2>Recipe 1</h2>
-                <p><strong>Ingredient: </strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore debitis modi autem eveniet? Eos, tenetur ab reprehenderit labore dolores totam.</p>
+                <p><strong>Ingredients:</strong> Lorem ipsum dolor sit amet.</p>
                 <a href="#">View Recipe</a>
-            </li>
-            <li class="recipe-item">
-                <img src="https://spoonacular.com/recipeImages/12346-312x231.jpg" alt="Recipe 1">
-                <h2>Recipe 1</h2>
-                <p><strong>Ingredient: </strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore debitis modi autem eveniet? Eos, tenetur ab reprehenderit labore dolores totam.</p>
-                <a href="#">View Recipe</a>
-            </li>
-            <li class="recipe-item">
-                <img src="https://spoonacular.com/recipeImages/12343-312x231.jpg" alt="Recipe 1">
-                <h2>Recipe 1</h2>
-                <p><strong>Ingredient: </strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore debitis modi autem eveniet? Eos, tenetur ab reprehenderit labore dolores totam.</p>
-                <a href="#">View Recipe</a>
-            </li>
-            <li class="recipe-item">
-                <img src="https://spoonacular.com/recipeImages/12347-312x231.jpg" alt="Recipe 1">
-                <h2>Recipe 1</h2>
-                <p><strong>Ingredient: </strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore debitis modi autem eveniet? Eos, tenetur ab reprehenderit labore dolores totam.</p>
-                <a href="#">View Recipe</a>
-            </li>
-            <li class="recipe-item">
-                <img src="https://spoonacular.com/recipeImages/12348-312x231.jpg" alt="Recipe 1">
-                <h2>Recipe 1</h2>
-                <p><strong>Ingredient: </strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore debitis modi autem eveniet? Eos, tenetur ab reprehenderit labore dolores totam.</p>
-                <a href="#">View Recipe</a>
-            </li>
-            <li class="recipe-item">
-                <img src="https://spoonacular.com/recipeImages/12349-312x231.jpg" alt="Recipe 1">
-                <h2>Recipe 1</h2>
-                <p><strong>Ingredient: </strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore debitis modi autem eveniet? Eos, tenetur ab reprehenderit labore dolores totam.</p>
-                <a href="#">View Recipe</a>
-            </li>
-        </ul>>
+            </li> -->
+        </ul>
     </div>
     <script src="script.js"></script>
 </body>
