two more projecs added

--- a/15 English Dictionary/index.html
+++ b/15 English Dictionary/index.html
@@ -3,20 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>English Dictionary</title>
+    <title>Animate Pics Generator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <div class="container">
-        <h1 class="title">English Dictionary</h1>
-        <input type="text" class="input-text" placeholder="Search a word">
-        <p>Type a word and press ENTER.</p>
-        <!-- <div class="meaning-container">
-            <p class="word-title">Word Title: <span>-----------</span></p>
-            <p class="word-meaning">Meaning <span> ---------- </span></p>
-            <audio src="#" controls></audio>
-        </div> -->
+        <h1>Anime Pics Generator</h1>
+        <button>Get Anime</button>
+        <div class="photo-container">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0SLFCjqQh3u6Pqd95G2o0OW4bg_R88cAQNw&s" alt="an image">
+        </div>
+        <h3>Description</h3>
     </div>
 
     <script src="script.js"></script>
